# quasar

./: .gitignore  Cargo.toml  Makefile  README.md  libupstream_vault.profile.json
.github/workflows/: ci.yml
cli/src/: build.rs  build_lockfile.rs  config.rs  idl.rs  init.rs  lib.rs  lint.rs  new.rs  test.rs
cli/src/init/: scaffold.rs  templates.rs
core/: Cargo.toml
core/src/: client.rs  dynamic.rs  entrypoint.rs  event.rs  lib.rs  macros.rs  pda.rs  pod.rs  prelude.rs  remaining.rs  traits.rs
core/src/accounts/: account.rs  initialize.rs
core/src/cpi/: buf.rs  mod.rs  system.rs
core/src/sysvars/: rent.rs
core/tests/: miri.rs
core/tests/compile_fail/: dynamic_vec_alignment.stderr
derive/src/: account.rs  error_code.rs  event.rs  helpers.rs  instruction.rs  lib.rs  program.rs
derive/src/account/: accessors.rs  dynamic.rs  fixed.rs  mod.rs  seeds.rs
derive/src/accounts/: attrs.rs  client.rs  field_kind.rs  fields.rs  fields_process.rs  fields_support.rs  init.rs  mod.rs
docs/: accounts.md  cpi.md  events.md  idl.md  macros.md  pod.md  safety.md  tokens.md
examples/escrow/: Cargo.toml
examples/escrow/client/: Cargo.toml
examples/escrow/src/: client.rs  lib.rs  tests.rs
examples/escrow/src/instructions/: make.rs  refund.rs  take.rs
examples/multisig/: Cargo.toml
examples/multisig/client/: Cargo.toml
examples/multisig/src/: lib.rs
examples/pinocchio-escrow/: Cargo.toml
examples/pinocchio-escrow/src/: constants.rs  errors.rs  lib.rs  tests.rs
examples/pinocchio-vault/: Cargo.toml
examples/pinocchio-vault/src/: constants.rs  errors.rs  lib.rs  tests.rs
examples/upstream-vault/: Cargo.toml
examples/upstream-vault/src/: lib.rs
examples/vault/: Cargo.toml
examples/vault/client/: Cargo.toml
examples/vault/src/: client.rs  lib.rs
idl/: Cargo.toml
idl/src/: codegen.rs  lib.rs  main.rs  types.rs
idl/tests/: lint.rs  parser.rs
lang/: Cargo.toml
lang/src/: client.rs  context.rs  lib.rs  prelude.rs  remaining.rs
lang/tests/: miri.rs
pod/: Cargo.toml
pod/src/: lib.rs
profile/: Cargo.toml  Readme.md
profile/src/: lib.rs  main.rs  output.rs  serve.rs
quasar/: Cargo.toml
scripts/: check-runtime-panics.sh  check-workspace-invariants.sh
spl/src/: close.rs  constants.rs  cpi.rs  init.rs  lib.rs  token.rs
spl/tests/: miri.rs
tests/suite/: Cargo.toml
(+101 files in other folders)
